--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
     "start": "sirv public"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "autoprefixer": "^9.7.4",
+    "babel": "^6.23.0",
+    "builtin-modules": "^3.1.0",
     "node-sass": "^4.13.1",
     "rollup": "^1.20.0",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^3.4.0"
   },
   "dependencies": {
+    "core-js": "^3.6.4",
     "sirv-cli": "^0.4.4"
   }
 }
